<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <ImageView android:src="@drawable/icon" android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/mobiIcon"
        />


    <Button android:text="@string/admin" android:id="@+id/admin" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <Button android:text="@string/user" android:id="@+id/user" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    <Button android:text="@string/reset" android:id="@+id/reset" android:layout_width="fill_parent" android:layout_height="wrap_content"/>

</LinearLayout>
